--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,18 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 html, body {
   width: 100%;
   height: 100%;
-  background-color: aqua;
+  background-image: url("./../assets/Monitor Frame copy 3.png");
+  position: overlay;
+  left: 509px;
+  top: 257px;
+  width: 898px;
+  height: 465px;
+  z-index: 151;
+
 }
 
 #enter {
@@ -26,6 +34,8 @@ html, body {
   width:470px;
   height: 220px;
 }
+
+
 
 
 
