--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
   background-image: url("./../assets/Monitor_Frame_copy_3.png");
   position: absolute;
   background-color: aqua;
-  z-index: 0;
+  
   
 }
 
@@ -22,27 +22,26 @@ body {
     height: 151px;
     z-index: 1;
 }
- 
-
-
-
-/* #enter {
+#enter {
   position: absolute;
-  left: 145px;
-  top: 430px;
+  left: 1430px;
+  top: 330px;
   color: transparent;
   width: 368px;
   height: 150px;
+  
 }
-
 #darkMode {
   position: absolute;
-  left: 145px;
-  top: 660px;
+  left: 1430px;
+  top: 590px;
   color: transparent;
-  width:470px;
-  height: 220px;
-} */
+  width: 368px;
+  height: 150px;
+  z-index: 0;
+}
+
+
 
 
 
