will update home.Html with wireframe starting pieces

--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -3,3 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-image: url("./../assets/teplate.png");
+  background-color: aqua;
+}
+
