--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -1,10 +1,21 @@
-* {
+
+
+body, html {
+  height: 100%;
   margin: 0;
-  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  height: 100vh;
-  background-image: url("./../assets/template.png");
-  background-color: aqua;
+
+.hero-image{
+  height: 100%;
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+   */
+}
+
+#background{
+  
 }
