--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -1,21 +1,9 @@
-
-
-body, html {
-  height: 100%;
+* {
+  padding: 0;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
-
-.hero-image{
-  height: 100%;
-  /* background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-   */
-}
-
-#background{
-  
+nav {
+  position: absolute;
 }
