--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -2,8 +2,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: aqua;
 }
-
+.template{
+  padding: 20;
+  
+}
 nav {
   position: absolute;
+  
 }
+
