--- a/css/projectStyes.css
+++ b/css/projectStyes.css
@@ -2,4 +2,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color:aqua
 }
+.templatewireframe{
+  background-image: url("assets/teplate.png");
+  position: absolute;
+}
+
+/* .projectsMeButtons{
+  position: overlay;
+  
+} */
