--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,7 @@ body {
   height: 100%;
   background-image: url("./../assets/Monitor_Frame_copy_3.png");
   position: absolute;
-  background-color: #cccccc;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background-color: aqua;
 }
 .greeting{
     position: absolute;
@@ -28,6 +22,7 @@ body {
 
 
 #enter {
+  background-color: snow;
   position: absolute;
   left: 1430px;
   top: 330px;
@@ -36,11 +31,12 @@ body {
   height: 150px;
 }
 #darkMode {
+  background-color: snow;
   position: absolute;
   left: 1430px;
   top: 590px;
   color: transparent;
   width: 368px;
   height: 150px;
-  z-index: 0;
+
 }
