--- a/css/aboutMeStyles.css
+++ b/css/aboutMeStyles.css
@@ -3,3 +3,46 @@
   margin: 0;
   box-sizing: border-box;
 }
+.container{
+  margin: 0;
+  padding: 0%;
+
+}
+body {
+  margin: 0;
+  font-family: "Impact", sans-serif;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 100px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 10px;
+
+  text-decoration: none;
+}
+ 
+.sidebar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
