--- a/css/aboutMeStyles.css
+++ b/css/aboutMeStyles.css
@@ -5,13 +5,15 @@
 }
 .container{
   margin:0;
-  padding: 0%;
+
 
 }
 body {
   margin: 0;
   font-family: "Impact", sans-serif;
+  font-size: 18pt;
 }
+
 
 
 
