--- a/css/aboutMeStyles.css
+++ b/css/aboutMeStyles.css
@@ -3,19 +3,24 @@
   margin: 0;
   box-sizing: border-box;
 }
+ 
 .container{
   margin:0;
-
-
 }
+
 body {
   margin: 0;
   font-family: "Impact", sans-serif;
   font-size: 18pt;
 }
-
-
-
+.hero {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 90%; 
+  min-height: 90%;
+  
+}
 
 .sidebar {
   margin: 0;
@@ -23,7 +28,7 @@ body {
   width: 100px;
   background-color: #f1f1f1;
   position: fixed;
-  height: 100%;
+  height: 70%;
   overflow: auto;
 }
 
@@ -52,3 +57,4 @@ div.wrapper {
   font-size: 35px;
   position: absolute;
 }
+
