--- a/css/aboutMeStyles.css
+++ b/css/aboutMeStyles.css
@@ -22,6 +22,7 @@ body {
   
 }
 
+
 .sidebar {
   margin: 0;
   padding: 0;
@@ -35,7 +36,7 @@ body {
 .sidebar a {
   display: block;
   color: black;
-  padding: 10px;
+  padding: 0px;
 
   text-decoration: none;
 }
@@ -57,4 +58,51 @@ div.wrapper {
   font-size: 35px;
   position: absolute;
 }
+div.gallery {
+  /* border: 1px solid #ccc; */
+}
 
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  padding-top: 600px;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 0px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* .responsive */
