--- a/css/galleryStyles.css
+++ b/css/galleryStyles.css
@@ -3,15 +3,25 @@
   margin: 0;
   box-sizing: border-box;
 }
+ 
 .container{
-  margin: 0;
-  padding: 0%;
-
+  margin:0;
 }
+
 body {
   margin: 0;
   font-family: "Impact", sans-serif;
+  font-size: 18pt;
 }
+.hero {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 90%; 
+  min-height: 90%;
+  
+}
+
 
 .sidebar {
   margin: 0;
@@ -19,15 +29,14 @@ body {
   width: 100px;
   background-color: #f1f1f1;
   position: fixed;
-  height: 100%;
+  height: 70%;
   overflow: auto;
 }
 
 .sidebar a {
   display: block;
   color: black;
-  padding: 30px;
-  
+  padding: 0px;
 
   text-decoration: none;
 }
@@ -42,8 +51,58 @@ body {
   color: white;
 }
 
-div.content {
+div.wrapper {
   margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
+  font-size: 35px;
+  position: absolute;
 }
+div.gallery {
+  /* border: 1px solid #ccc; */
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  padding-top: 0px;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 0px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* .responsive */
