--- a/css/aboutMeStyles.css
+++ b/css/aboutMeStyles.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   font-family: "Impact", sans-serif;
   font-size: 18pt;
+  background-color: aqua;
 }
 .hero {
   position: fixed;
@@ -26,10 +27,11 @@ body {
 .sidebar {
   margin: 0;
   padding: 0;
-  width: 100px;
+  left: 0px;
+  width: 110px;
   background-color: #f1f1f1;
   position: fixed;
-  height: 70%;
+  height: 100%;
   overflow: auto;
 }
 
@@ -52,10 +54,13 @@ body {
 }
 
 div.wrapper {
-  margin-left: 200px;
+  top: 800Px;
+  margin-left: 100px;
+  margin-right: 150px;
   padding: 1px 16px;
   height: 1000px;
   font-size: 35px;
+  color: white;
   position: absolute;
 }
 div.gallery {
