--- a/css/aboutMeStyles.css
+++ b/css/aboutMeStyles.css
@@ -18,17 +18,15 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
-  min-width: 90%; 
-  min-height: 90%;
-  
+  min-width: 100%; 
+  min-height: 100%;
 }
-
 
 .sidebar {
   margin: 0;
   padding: 0;
   left: 0px;
-  width: 110px;
+  width: 105px;
   background-color: #f1f1f1;
   position: fixed;
   height: 100%;
@@ -39,12 +37,11 @@ body {
   display: block;
   color: black;
   padding: 0px;
-
   text-decoration: none;
 }
  
 .sidebar a.active {
-  background-color: #4CAF50;
+  background-color: #e403d1;
   color: white;
 }
 
@@ -58,13 +55,14 @@ div.wrapper {
   margin-left: 100px;
   margin-right: 150px;
   padding: 1px 16px;
-  height: 1000px;
+  height: 100px;
   font-size: 35px;
   color: white;
   position: absolute;
 }
+
 div.gallery {
-  /* border: 1px solid #ccc; */
+  
 }
 
 div.gallery:hover {
@@ -110,4 +108,3 @@ div.desc {
   display: table;
   clear: both;
 }
-/* .responsive */
