--- a/css/homeStyles.css
+++ b/css/homeStyles.css
@@ -6,7 +6,6 @@
 .container{
   margin: 0;
   padding: 0%;
-
 }
 body {
   margin: 0;
@@ -29,23 +28,31 @@ body {
   display: block;
   color: black;
   padding: 22px;
-  
-
   text-decoration: none;
 }
  
 .sidebar a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #10acf5;
+  color: rgb(228, 10, 10);
 }
 
 .sidebar a:hover:not(.active) {
   background-color: #555;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 div.wrapper {
-  margin-left: 200px;
+  margin-left: 00px;
   padding: 1px 16px;
-  height: 1000px;
+  height: 90px;
+}
+div.wrapper1 {
+  top: 800Px;
+  margin-left: 200px;
+  margin-right: 150px;
+  padding: 1px 16px;
+  height: 90px;
+  font-size: 35px;
+  color: rgb(8, 1, 1);
+  position: absolute;
 }
