--- a/css/DhomeStyles.css
+++ b/css/DhomeStyles.css
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
   width: 120px;
-  background-color: #86d4e7;
+  background-color: #090d86;
   position: fixed;
   height: 100%;
   overflow: auto;
